--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "audit:imports": "tsx scripts/dev/auditImports.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.50.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
