--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
+    "libsodium-wrappers": "^0.7.15",
     "next": "15.3.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
@@ -27,11 +28,13 @@
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "node-fetch": "^2.7.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
