--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
-    "lib": ["ES2020"],
-    "strict": true,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
+    "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "../dist/scripts"
+    "outDir": "dist"
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
