Fix build error: Add missing critters dependency

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "framer-motion": "^12.16.0",
     "libsodium-wrappers": "^0.7.15",
     "next": "15.3.3",
