--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "critters": "^0.0.23",
     "framer-motion": "^12.23.0",
     "libsodium-wrappers": "^0.7.15",
+    "lucide-react": "^0.526.0",
     "next": "15.3.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
