--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "node-fetch": "^2.7.0",
+    "sharp-cli": "^5.2.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
